--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "js": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^5.4.2",
+    "react-hook-form": "^5.5.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0",
     "type": "^2.0.0",
     "typed": "^0.3.3"
   },
